--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "devDependencies": {},
   "dependencies": {
+    "@nextui-org/react": "^1.0.0-beta.12",
     "axios": "^1.2.1",
-    "fs-extra": "11.1.0"
+    "fs-extra": "11.1.0",
+    "image-size": "^1.0.2"
   }
 }
